force-app/main/default/objects/ucinn_portal_Participation__c/ucinn_portal_Participation__c.object-meta.xml
<CustomObject>
    <label>Participation</label>
    <nameField>
        <label>Participation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>