force-app/main/default/objects/ucinn_portal_Participation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participations</relationshipLabel>
    <relationshipName>ucinn_portal_Participations_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>