force-app/main/default/objects/ucinn_portal_Participation__c/fields/Degree_and_Year__c.field-meta.xml
<CustomField>
    <fullName>Degree_and_Year__c</fullName>
    <label>Degree and Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>