force-app/main/default/objects/ucinn_portal_Participation__c/fields/Has_Attended__c.field-meta.xml
<CustomField>
    <fullName>Has_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Attended</label>
    <type>Checkbox</type>
</CustomField>