force-app/main/default/objects/ucinn_portal_Participation__c/fields/Is_Display_On_Look_Who_s_Coming_List__c.field-meta.xml
<CustomField>
    <fullName>Is_Display_On_Look_Who_s_Coming_List__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Display On Look Who&apos;s Coming List</label>
    <type>Checkbox</type>
</CustomField>