force-app/main/default/objects/ucinn_portal_Participation__c/fields/Is_Send_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Send Confirmation Email</label>
    <type>Checkbox</type>
</CustomField>