force-app/main/default/objects/ucinn_portal_Participation__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <referenceTo>ucinn_portal_Listing__c</referenceTo>
    <relationshipLabel>Participations</relationshipLabel>
    <relationshipName>ucinn_portal_Participations_Listing</relationshipName>
    <type>Lookup</type>
</CustomField>