force-app/main/default/objects/ucinn_portal_Participation__c/fields/Name_Tag__c.field-meta.xml
<CustomField>
    <fullName>Name_Tag__c</fullName>
    <label>Name Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>