force-app/main/default/objects/ucinn_portal_Participation__c/fields/Primary_Participation__c.field-meta.xml
<CustomField>
    <fullName>Primary_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Participation</label>
    <referenceTo>ucinn_portal_Participation__c</referenceTo>
    <relationshipLabel>Participations</relationshipLabel>
    <relationshipName>ucinn_portal_Participations_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>