force-app/main/default/objects/ucinn_portal_Participation__c/fields/Purchasing_Constituent__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchasing Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participations (Purchasing Constituent)</relationshipLabel>
    <relationshipName>ucinn_portal_Participations_Puchasing</relationshipName>
    <type>Lookup</type>
</CustomField>